--- a/control.html
+++ b/control.html
@@ -117,6 +117,7 @@
                 <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_loc')">lock system</button></li>
                 <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_unloc')">unlock system</button></li>
               </ul>
+              
             </div>
           </li>
 
@@ -153,7 +154,9 @@
               </ul>
             </div>
           </li>
+<li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('record_screen')">record screen</button></li>
 
+</li>
         </ul>
       </div>
     </div>
@@ -266,5 +269,6 @@
   </script>
 </body>
 </html>
+
 
 
