--- a/control.html
+++ b/control.html
@@ -154,7 +154,7 @@
               </ul>
             </div>
           </li>
-<li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('record_screen')">record screen</button></li>
+<li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('record_screen')">Record Screen</button></li>
 
 </li>
         </ul>
@@ -269,6 +269,5 @@
   </script>
 </body>
 </html>
-
 
 
