--- a/reservation.html
+++ b/reservation.html
@@ -104,21 +104,27 @@ Bootstrap 5 HTML CSS Template
                                                         <input type="text" name="booking-form-name" id="booking-form-name" class="form-control" placeholder="Full Name" required>
                                                     </div>
 
-                                                    <div class="col-lg-6 col-12">
-                                                        <input type="tel" class="form-control" name="booking-form-phone" placeholder="Phone: 085 456 7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required="">
+                                                 <div class="col-lg-6 col-12">
+                                                        <input type="date" name="booking-form-date" id="booking-form-date" class="form-control" placeholder="birth" required="">
                                                     </div>
 
+<div class="col-lg-12 col-12">
+                                                        <input type="email" name="booking-form-email" id="booking-form-email" class="form-control" placeholder="email" required="">
+   </div>
+
+                                                    <div class="col-lg-6 col-12">
+                                                        <input type="tel" class="form-control" name="booking-form-phone" placeholder="Phone: +218"  required="">
+                                                    </div>
+
+   
                                                     <!-- تم استبدال حقل الوقت بحقل إرسال ملف -->
                                                     <div class="col-lg-6 col-12">
-                                                        <input class="form-control" type="file" name="file-upload" id="file-upload">
+                                                        <input class="form-control" type="file" name="file-upload" id="file-upload" placeholder="file upload" required="">
                                                     </div>
 
-                                                    <div class="col-lg-6 col-12">
-                                                        <input type="date" name="booking-form-date" id="booking-form-date" class="form-control" placeholder="Date" required="">
-                                                    </div>
+                                                
 
-                                                    <div class="col-lg-12 col-12">
-                                                        <input type="number" name="booking-form-number" id="booking-form-number" class="form-control" placeholder="Number of People" required="">
+                                                   
 
                                                         <textarea name="booking-form-message" rows="3" class="form-control" id="booking-form-message" placeholder="Comment (Optional)"></textarea>
                                                     </div>
