--- a/reservation.html
+++ b/reservation.html
@@ -62,6 +62,20 @@
             .navbar-nav .nav-link:hover {
                 color: var(--secondary-color); /* Light Blue on hover/active */
             }
+            btn-toggle{
+  display:block;
+      width:100%;
+      text-align:left;
+      padding:16px 20px;
+      font-weight:700;
+      color:#fff;
+      background:transparent;
+      border:0;
+    }
+    .btn-toggle:hover{ background:rgba(255,255,255,.05); }
+    .list-group-dark .list-group-item{
+      background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
+    }
 
             .navbar-toggler .navbar-toggler-icon,
             .navbar-toggler .navbar-toggler-icon:before,
@@ -606,5 +620,6 @@
 
     </body>
 </html>
+
 
 
