--- a/reservation.html
+++ b/reservation.html
@@ -393,15 +393,15 @@
                                     <div class="col-lg-7 col-12 p-0">
                                         <form class="custom-form booking-form" action="#" method="post" role="form" enctype="multipart/form-data">
                                             <div class="text-center mb-4 pb-lg-2">
-                                                <em class="text-white">Fill out the booking form</em>
+                                                <em class="text-white">Services provided by the smart door system</em>
 
-                                                <h2 class="text-white">Book a table</h2>
+                                                <h2 class="text-white">Control & Learn</h2>
                                             </div>
 
                                             <div class="booking-form-body">
                                                 
   <div class="container py-3">
-    <h1>SMART DOOR SYSTEM</h1>
+    <h1>Al Majd Food Industries Company</h1>
 
     <div class="card control-card">
       <button type="button" class="btn-toggle"
@@ -704,3 +704,4 @@
         </script>
     </body>
 </html>
+
