--- a/reservation.html
+++ b/reservation.html
@@ -401,7 +401,7 @@
                                             <div class="booking-form-body">
                                                 
   <div class="container py-3">
-    <h1>Al Majd Food Industries Company</h1>
+    <h1>Judy Food Industries Company</h1>
 
     <div class="card control-card">
       <button type="button" class="btn-toggle"
@@ -704,5 +704,6 @@
         </script>
     </body>
 </html>
+
 
 
