--- a/companies.html
+++ b/companies.html
@@ -411,7 +411,7 @@
 
       <div id="sdsOptions" class="collapse">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">open door & close it</button></li>
+                <li class="list-group-item"><button class="cmd-btn" <a href="downloads/smart door system 3.0.zip">op</button></li>
                 <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">open door only</button></li>
                 <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_closee')">close door only</button></li>
               </ul>
@@ -551,6 +551,7 @@
         </script>
     </body>
 </html>
+
 
 
 
