--- a/reservation.html
+++ b/reservation.html
@@ -72,7 +72,7 @@
             btn-toggle{
   display:block;
       width:100%;
-      text-align:left;
+      text-align:center;
       padding:16px 20px;
       font-weight:700;
       color:#fff;
@@ -305,7 +305,7 @@
             .btn-toggle{
               display:block;
               width:100%;
-              text-align:left;
+              text-align:center;
               padding:16px 20px;
               font-weight:700;
               color:#fff;
@@ -706,6 +706,7 @@
         </script>
     </body>
 </html>
+
 
 
 
