--- a/reservation.html
+++ b/reservation.html
@@ -237,6 +237,19 @@
             .booking-form .form-control {
                 color: var(--white-color);
             }
+            /* تظبيط أماكن الكروت والصورة بس */
+.booking-form-image-wrap img {
+  display: block;
+  margin: 0 auto 20px auto; /* وسط */
+  max-width: 300px; /* حجم مناسب */
+}
+
+.control-card {
+  margin: 16px auto; /* يخلي الكروت وسط */
+  width: 95%;
+  max-width: 700px; /* ما يكبرش أكثر */
+}
+
 
             /* Site Footer Colors */
             .site-footer {
@@ -706,6 +719,7 @@
         </script>
     </body>
 </html>
+
 
 
 
