--- a/reservation.html
+++ b/reservation.html
@@ -344,6 +344,19 @@
             #aiLoading {
                 text-align: center;
             }
+            /* تظبيط أماكن الكروت والصورة بس */
+.booking-form-image-wrap img {
+  display: block;
+  margin: 0 auto 20px auto; /* وسط */
+  max-width: 300px; /* حجم مناسب */
+}
+
+.control-card {
+  margin: 16px auto; /* يخلي الكروت وسط */
+  width: 95%;
+  max-width: 700px; /* ما يكبرش أكثر */
+}
+
         </style>
     </head>
     
@@ -719,6 +732,7 @@
         </script>
     </body>
 </html>
+
 
 
 
