--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -174,7 +174,7 @@
     </section>
 
     <section>
-      <h2>Work Experience</h2>
+      <h2>Current Projects</h2>
       <h3>Web Developer - Future Co.</h3>
       <p><strong>2020 - Present</strong></p>
       <ul>
@@ -200,12 +200,12 @@
     <section>
       <h2>Skills</h2>
       <div class="skills-list">
-        <span class="skill-badge">HTML5</span>
-        <span class="skill-badge">CSS3</span>
-        <span class="skill-badge">JavaScript</span>
-        <span class="skill-badge">React</span>
-        <span class="skill-badge">Node.js</span>
-        <span class="skill-badge">Responsive Design</span>
+        <span class="skill-badge">English</span>
+        <span class="skill-badge">Basic Python</span>
+        <span class="skill-badge">Basic Arduino</span>
+        <span class="skill-badge">Basic Html</span>
+        <span class="skill-badge">Telegram Bot</span>
+    
       </div>
     </section>
 
