--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                             <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
                                         </div>
                                     </div>
-                                    <a href="profile-abdulali.html" 
+                                    <a href="profile-Abdulali.html" 
                                             class="btn mt-3" 
                                             style="background:#000; color:#fff; border-radius:8px;">
                                         Learn More
@@ -873,6 +873,7 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
 
 
