--- a/reservation.html
+++ b/reservation.html
@@ -244,12 +244,6 @@
   max-width: 300px; /* حجم مناسب */
 }
 
-.control-card {
-  margin: 16px auto; /* يخلي الكروت وسط */
-  width: 95%;
-  max-width: 700px; /* ما يكبرش أكثر */
-}
-
 
             /* Site Footer Colors */
             .site-footer {
@@ -307,28 +301,33 @@
               color:var(--text);
               font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,"Plus Jakarta Sans",Arial,sans-serif;
             }
-            h1{
-              text-align:center; font-weight:800; letter-spacing:.05em;
-              margin:40px 0 24px;
-            }
-            .control-card{
-              background:var(--card); border:0; border-radius:16px; overflow:hidden;
-              box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px; width: 90%;
-            }
-            .btn-toggle{
-              display:block;
-              width:100%;
-              text-align:left;
-              padding:16px 20px;
-              font-weight:700;
-              color:#fff;
-              background:transparent;
-              border:0;
-            }
-            .btn-toggle:hover{ background:rgba(255,255,255,.05); }
-            .list-group-dark .list-group-item{
-              background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
-            }
+      h1{
+      text-align:center; font-weight:800; letter-spacing:.05em;
+      margin:40px 0 24px;
+    }
+    .control-card{
+      background:var(--card); border:0; border-radius:16px; overflow:hidden;
+      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px ;  width: 90%  ;
+    }
+    .btn-toggle{
+  display:block;
+      width:100%;
+      text-align:left;
+      padding:16px 20px;
+      font-weight:700;
+      color:#fff;
+      background:transparent;
+      border:0;
+    }
+    .btn-toggle:hover{ background:rgba(255,255,255,.05); }
+    .list-group-dark .list-group-item{
+      background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
+    }
+    .list-group-dark .list-group-item:hover{ background:var(--list-hover); }
+    .ms-3{ margin-left:1rem !important; }
+    button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
+    button.cmd-btn:hover {text-decoration:underline;}
+              
             .ms-3{ margin-left:1rem !important; }
             button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
             button.cmd-btn:hover {text-decoration:underline;}
@@ -738,6 +737,7 @@
         </script>
     </body>
 </html>
+
 
 
 
