--- a/reservation.html
+++ b/reservation.html
@@ -67,7 +67,7 @@
             btn-toggle{
   display:block;
       width:100%;
-      text-align:left;
+      text-align:center;
       padding:16px 20px;
       font-weight:700;
       color:#fff;
@@ -307,7 +307,7 @@
     .btn-toggle{
   display:block;
       width:100%;
-      text-align:left;
+      text-align:center;
       padding:16px 20px;
       font-weight:700;
       color:#fff;
@@ -732,6 +732,7 @@
         </script>
     </body>
 </html>
+
 
 
 
