--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -132,12 +132,6 @@ Bootstrap 5 HTML CSS Template
                                     <a class="nav-link click-scroll" href="download.html">App</a>
                                 </li>
                             </ul>
-
-                            <div class="ms-lg-3">
-                                <a class="btn custom-btn custom-border-btn" href="reservation.html">
-                                    Reservation
-                                    <i class="bi-arrow-up-right ms-2"></i>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -244,7 +238,7 @@ Bootstrap 5 HTML CSS Template
 
     <!-- LIVESTREAM VIDEO BOX -->
     <div id="livestreamBox" style="display:none; margin-top:20px;" class="card control-card">
-      <h3 class="p-3">ðº Livestream</h3>
+      <h3 class="p-3">Livestream</h3>
       <div class="ratio ratio-16x9">
         <iframe id="twitchStream"
            src="https://player.twitch.tv/?channel=jq7v444&parent=smartdoorsystem.github.io"
@@ -438,6 +432,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
