--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -139,6 +139,11 @@ Bootstrap 5 HTML CSS Template
 <body>
   <div class="container py-3">
     <h1>SMART DOOR SYSTEM</h1>
+      <div class="col-lg-5 col-12 p-0">
+                                        <div class="booking-form-image-wrap">
+                                            
+                                            <img src="images/reviews/JudyFoodIndustriesCompany.jpg" class="booking-form-image img-fluid" alt="">
+                                        </div>
 
     <!-- ========== OPTIONS ========== -->
     <div class="card control-card">
@@ -432,6 +437,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
