--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -145,6 +145,10 @@ Bootstrap 5 HTML CSS Template
                                             <img src="images/reviews/JudyFoodIndustriesCompany.jpg" class="booking-form-image img-fluid" alt="">
                                         </div>
 
+          <footer class="site-footer">
+                    <div class="container">
+                        <div class="row">
+                            
     <!-- ========== OPTIONS ========== -->
     <div class="card control-card">
       <button type="button" class="btn-toggle"
@@ -295,7 +299,7 @@ Bootstrap 5 HTML CSS Template
                      </div>
                     </div>
                 </section>
-
+          </footer>
 <footer class="site-footer">
                                     <div class="container">
                                         <div class="row">
@@ -402,6 +406,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
