--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -67,6 +67,14 @@ Bootstrap 5 HTML CSS Template
       background:var(--card); border:0; border-radius:16px; overflow:hidden;
       box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px ;  width: 90%  ;
     }
+      
+  /* ... your existing CSS code ... */
+
+  .navbar-brand {
+    color: #fff;
+  }
+
+        
     .btn-toggle{
   display:block;
       width:100%;
@@ -407,6 +415,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
