--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -78,7 +78,7 @@ Bootstrap 5 HTML CSS Template
     .btn-toggle{
   display:block;
       width:100%;
-      text-align:left;
+      text-align:center;
       padding:16px 20px;
       font-weight:700;
       color:#fff;
@@ -91,7 +91,7 @@ Bootstrap 5 HTML CSS Template
     }
     .list-group-dark .list-group-item:hover{ background:var(--list-hover); }
     .ms-3{ margin-left:1rem !important; }
-    button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
+    button.cmd-btn {background:none;border:none;color:white;text-align:center;width:100%;}
     button.cmd-btn:hover {text-decoration:underline;}
 
     #aiResponse, #aiLoading {
@@ -415,6 +415,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
