--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -63,17 +63,20 @@ Bootstrap 5 HTML CSS Template
       text-align:center; font-weight:800; letter-spacing:.05em;
       margin:40px 0 24px;
     }
-   .control-card {
-  background:var(--card);
-  border:0;
-  border-radius:16px;
-  overflow:hidden;
-  box-shadow:0 10px 30px rgba(0,0,0,.35);
-  margin-bottom:16px;
-  width:430px;             /* العرض اللي تبيه */
-  margin-left:auto;        /* هذي تخليه في النص */
-  margin-right:auto;
+.control-card {
+  background: var(--card);
+  border: 0;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 10px 30px rgba(0,0,0,.35);
+  margin-bottom: 16px;
+
+  /* أهم حاجات للتوسيط */
+  width: 430px;          /* العرض اللي تحبه */
+  margin-left: auto;     /* هذي تحطه في النص */
+  margin-right: auto;
 }
+
       
   /* ... your existing CSS code ... */
 
@@ -422,6 +425,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
