--- a/xjsjsjsjs.html
+++ b/xjsjsjsjs.html
@@ -155,6 +155,34 @@ Bootstrap 5 HTML CSS Template
                     </div>
                 </nav>
 <body>
+    <script>
+        // Define the correct username and password
+        const correctUsername = "smart_door_system";
+        const correctPassword = "1037";
+
+        function showLoginPrompt() {
+            let username = prompt("Please enter the username:");
+            let password = prompt("Please enter the password:");
+
+            if (username === correctUsername && password === correctPassword) {
+                // If login is successful, do nothing. The page content will be visible.
+                alert("Login successful!");
+            } else {
+                // If login fails, hide the content and show an alert.
+                document.body.style.display = 'none';
+                alert("Incorrect username or password. Please try again.");
+                // Re-run the function to prompt again
+                showLoginPrompt();
+            }
+        }
+
+        // Run the function when the page loads
+        showLoginPrompt();
+    </script>
+
+    <main>
+    ...
+        
     
           <footer class="site-footer">
                     <div class="container">
@@ -425,6 +453,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
