--- a/companies.html
+++ b/companies.html
@@ -384,7 +384,24 @@
 
 
 
+<section class="booking-section section-padding">
+                <div class="container">
+                    <div class="row">
 
+                        <div class="col-lg-10 col-12 mx-auto">
+                            <div class="booking-form-wrap">
+                                <div class="row">
+                                    <div class="col-lg-7 col-12 p-0">
+                                        <!-- تم إضافة enctype="multipart/form-data" للسماح بإرسال الملفات -->
+                                        <form class="custom-form booking-form" action="#" method="post" role="form" enctype="multipart/form-data">
+                                            <div class="text-center mb-4 pb-lg-2">
+                                                <em class="text-white">Fill out the booking form</em>
+
+                                                <h2 class="text-white">Book a table</h2>
+                                            </div>
+
+                                            <div class="booking-form-body">
+                                                <div class="row">
                                 
 
                 
@@ -537,6 +554,7 @@
         </script>
     </body>
 </html>
+
 
 
 
