--- a/companies.html
+++ b/companies.html
@@ -420,6 +420,7 @@
     <button class="button"><a href=control.html>Company 3</a></button>
     <button class="button"><a href=control.html>Company 4</a></button>
     <button class="button"><a href=control.html>Company 5</a></button>
+    <button class="button"><a href=control.html>Company 6</a></button>
   </div>
  </div>
 
@@ -554,6 +555,7 @@
         </script>
     </body>
 </html>
+
 
 
 
