--- a/companies.html
+++ b/companies.html
@@ -395,9 +395,9 @@
                                         <!-- تم إضافة enctype="multipart/form-data" للسماح بإرسال الملفات -->
                                         <form class="custom-form booking-form" action="#" method="post" role="form" enctype="multipart/form-data">
                                             <div class="text-center mb-4 pb-lg-2">
-                                                <em class="text-white">Fill out the booking form</em>
+                                                <em class="text-white">companies under supervision of</em>
 
-                                                <h2 class="text-white">Book a table</h2>
+                                                <h2 class="text-white">smart door system</h2>
                                             </div>
 
                                             <div class="booking-form-body">
@@ -412,7 +412,6 @@
 
 
                <div class="container">
-  <h1>companies under supervision of smart door system</h1>
   
   <div class="button-group">
     <button class="button"><a href=control.html>Company 1</a></button>
@@ -555,6 +554,7 @@
         </script>
     </body>
 </html>
+
 
 
 
