--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
         }
 
         if (user === "smart_door_system" && pass === "1037") {
-            window.location.href = "control.html";  
+            window.location.href = "companies.html";  
         } else {
             document.getElementById("error").textContent = "Invalid username or password!";
         }
@@ -873,6 +873,7 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
 
 
