--- a/judy-job.html
+++ b/judy-job.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Smart door system Website</title>
+        <title>Smart Door System Job application</title>
         
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -328,9 +328,9 @@
                                         <!-- تم إضافة enctype="multipart/form-data" للسماح بإرسال الملفات -->
                                         <form class="custom-form booking-form" action="https://formspree.io/f/xdklgoae" method="post" role="form" enctype="multipart/form-data">
                                             <div class="text-center mb-4 pb-lg-2">
-                                                <em class="text-white">Fill out the booking form</em>
+                                                <em class="text-white">smart door system</em>
 
-                                                <h2 class="text-white">Book a table</h2>
+                                                <h2 class="text-white">Job application form at Judy Food Industries</h2>
                                             </div>
 
                                             <div class="booking-form-body">
@@ -444,6 +444,7 @@
 
     </body>
 </html>
+
 
 
 
