--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                         Your World, Securely Connected
                                     </p>
 
-                                    <a class="btn custom-btn custom-border-btn smoothscroll me-3" data-bs-toggle="modal" data-bs-target="#ideasModal">employees
+                                    <a class="btn custom-btn custom-border-btn smoothscroll me-3" data-bs-toggle="modal" data-bs-target="#ideas1Modal">Job Application
                                     </a>
 
                                     <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>Management</strong></a>
@@ -872,7 +872,76 @@
     // أول ما يفتح المودال يولد سؤال
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
+
+
+
+</body>
+<div class="modal fade" id="ideasModal1" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content" style="background: linear-gradient(135deg,#555,#333); color: white; border-radius: 15px;">
+            <div class="p-4">
+                <h4 class="mb-4 text-center" style="font-family: 'Plus Jakarta Sans', sans-serif; font-weight:600;">Login</h4>
+
+                <label for="username" class="form-label">Username</label>
+                <input type="text" id="username" class="form-control mb-3">
+
+                <label for="password" class="form-label">Password</label>
+                <div class="input-group mb-3">
+                    <input type="password" id="password" class="form-control">
+                    <button class="btn btn-outline-light" type="button" onclick="togglePassword()">👁</button>
+                </div>
+
+                <div class="mb-3">
+                    <label id="captchaQuestion" class="form-label"></label>
+                    <input type="text" id="captchaAnswer" class="form-control" placeholder="">
+                </div>
+
+                <button class="btn w-100 mb-2" style="background:#777; border:none; color:white;" onclick="checkLogin()">Login</button>
+                <p id="error" class="text-danger mt-2"></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    let correctAnswer;
+    function generateCaptcha() {
+        let a = Math.floor(Math.random()*10)+1;
+        let b = Math.floor(Math.random()*10)+1;
+        correctAnswer = a + b;
+        document.getElementById("captchaQuestion").textContent = `solve the equation: ${a} + ${b} = ?`;
+    }
+
+    function togglePassword() {
+        const pass = document.getElementById("password");
+        pass.type = pass.type === "password" ? "text" : "password";
+    }
+
+    function checkLogin() {
+        const user = document.getElementById("username").value;
+        const pass = document.getElementById("password").value;
+        const captcha = document.getElementById("captchaAnswer").value;
+
+        if (parseInt(captcha) !== correctAnswer) {
+            document.getElementById("error").textContent = "Verification answer is wrong!";
+            generateCaptcha();
+            return;
+        }
+
+        if (user === "smart_door_system_job" && pass === "1037") {
+            window.location.href = "companies-job.html";  
+        } else {
+            document.getElementById("error").textContent = "Invalid username or password!";
+        }
+    }
+
+    // أول ما يفتح المودال يولد سؤال
+    document.addEventListener("DOMContentLoaded", generateCaptcha);
+</script>
+    
 </html>
+
 
 
 
