--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                         Your World, Securely Connected
                                     </p>
 
-                                    <a class="btn custom-btn custom-border-btn smoothscroll me-3" data-bs-toggle="modal" data-bs-target="#ideas1Modal">Job Application
+                                    <a class="btn custom-btn custom-border-btn smoothscroll me-3" data-bs-toggle="modal" data-bs-target="#ideasModal1">Job Application
                                     </a>
 
                                     <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>Management</strong></a>
@@ -876,6 +876,11 @@
 
 
 
+
+
+
+    
+
 </body>
 <div class="modal fade" id="ideasModal1" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -889,7 +894,7 @@
                 <label for="password" class="form-label">Password</label>
                 <div class="input-group mb-3">
                     <input type="password" id="password" class="form-control">
-                    <button class="btn btn-outline-light" type="button" onclick="togglePassword()">👁</button>
+                    <button class="btn btn-outline-light" type="button" onclick="togglePassword1()">👁</button>
                 </div>
 
                 <div class="mb-3">
@@ -897,7 +902,7 @@
                     <input type="text" id="captchaAnswer" class="form-control" placeholder="">
                 </div>
 
-                <button class="btn w-100 mb-2" style="background:#777; border:none; color:white;" onclick="checkLogin()">Login</button>
+                <button class="btn w-100 mb-2" style="background:#777; border:none; color:white;" onclick="checkLogin1()">Login</button>
                 <p id="error" class="text-danger mt-2"></p>
             </div>
         </div>
@@ -906,24 +911,24 @@
 
 <script>
     let correctAnswer;
-    function generateCaptcha() {
+    function generateCaptcha1() {
         let a = Math.floor(Math.random()*10)+1;
         let b = Math.floor(Math.random()*10)+1;
         correctAnswer = a + b;
         document.getElementById("captchaQuestion").textContent = `solve the equation: ${a} + ${b} = ?`;
     }
 
-    function togglePassword() {
+    function togglePassword1() {
         const pass = document.getElementById("password");
         pass.type = pass.type === "password" ? "text" : "password";
     }
 
-    function checkLogin() {
+    function checkLogin1() {
         const user = document.getElementById("username").value;
         const pass = document.getElementById("password").value;
         const captcha = document.getElementById("captchaAnswer").value;
 
-        if (parseInt(captcha) !== correctAnswer) {
+        if (parseInt(captcha) !== correctAnswer1) {
             document.getElementById("error").textContent = "Verification answer is wrong!";
             generateCaptcha();
             return;
@@ -937,10 +942,11 @@
     }
 
     // أول ما يفتح المودال يولد سؤال
-    document.addEventListener("DOMContentLoaded", generateCaptcha);
+    document.addEventListener("DOMContentLoaded", generateCaptcha1);
 </script>
     
 </html>
+
 
 
 
